# scraper-ops

./: .env.example  .gitignore  CLAUDE.md  README.md  pyproject.toml
app/: audit.py  clock.py  env.py  evidence.py  locking.py  logging_setup.py  models.py  runtime.py
app/approval/: __init__.py  models.py  state_machine.py
app/approval_server/: __init__.py  queue.py  server.py  signature.py
app/collectors/: __init__.py  api_jobs.py  base.py  registry.py
app/config/: __init__.py  loader.py  schema.py
app/diagnosis/: __init__.py  classifier.py
app/healing/: __init__.py  builder.py  diff.py  dry_run.py  patcher.py
app/integrations/: __init__.py  slack.py
app/llm/: __init__.py  client.py  prompts.py  schemas.py  violations.py
app/patching/: __init__.py  apply.py  decision.py
app/runner/: __init__.py  __main__.py  cli.py  decision_poller.py  healing_flow.py
app/storage/: __init__.py  approval.py  repository.py  sqlite.py
app/validators/: __init__.py  postings.py
docs/: deployment.md  product-plan.md
tests/: test_api_jobs_collector.py  test_approval.py  test_approval_server_endpoint.py  test_approval_server_signature_and_queue.py  test_audit.py  test_clock.py  test_config.py  test_decision_poller.py  test_diagnosis.py  test_env.py  test_evidence.py  test_fetcher_http.py  test_healing.py  test_healing_diff.py  test_healing_dry_run.py  test_llm.py  test_locking.py  test_logging.py  test_patching_apply.py  test_patching_decision.py  test_runner_healing_flow.py  test_runner_regenerate.py  test_runtime.py  test_slack.py  test_storage.py  test_validators.py
(+5 files in other folders)
